--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -8,5 +8,11 @@
 <p>{{nom | uppercase | slice:1:3}}</p>
 
 <div *ngIf="!isVisible">I'm visible</div>
-
+<p>
 {{etatActuelDeLaProp}} <--
+</p>
+<button (click) = "decrement()">Diminuer</button><br>
+<app-child *ngIf="isVisible" [myNewNumber] = "counter" [nom]="name"></app-child>
+<button (click) = "increment()">Ajouter</button><br>
+<button (click) = "updateValue()">Update</button><br>
+<button (click) = "switchVisibility()">show/hide</button><br>
